kubernetes-manifests/mongo-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: mongo-service        # must match your headless Service name
  replicas: 2
  podManagementPolicy: OrderedReady # fixed casing
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      # removed invalid 'service: mongo-service' field
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:  # changed to preferred
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: mongo
                topologyKey: topology.kubernetes.io/zone
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
  volumeClaimTemplates:
    - metadata:
        name: mongo-pvc
      spec:
        accessModes: ["ReadWriteOnce"]   # changed from ReadWriteOncePod
        storageClassName: "mongo-storage"
        resources:
          requests:
            storage: 5Gi
